Salesforce/main/default/main/default/objects/Votacion__c/Votacion__c.object-meta.xml
<CustomObject>
    <description>Registro de las votaciones de los Multiplicadores</description>
    <label>Votacion</label>
    <nameField>
        <label>Nombre de Votacion</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Votaciones</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>