Salesforce/main/default/main/default/objects/Votacion__c/fields/Control_Voto_Duplicado__c.field-meta.xml
<CustomField>
    <fullName>Control_Voto_Duplicado__c</fullName>
    <label>Control Voto Duplicado</label>
    <length>80</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>