Salesforce/main/default/main/default/objects/Votacion__c/fields/CRM_Multiplicador__c.field-meta.xml
<CustomField>
    <fullName>CRM_Multiplicador__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CRM Multiplicador</label>
    <referenceTo>CRM_Multiplicador__c</referenceTo>
    <relationshipLabel>Votaciones</relationshipLabel>
    <relationshipName>Votaciones</relationshipName>
    <type>Lookup</type>
</CustomField>