Salesforce/main/default/main/default/objects/Votacion__c/fields/Incidencia_para_Votar__c.field-meta.xml
<CustomField>
    <fullName>Incidencia_para_Votar__c</fullName>
    <label>% de Incidencia para Votar</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>