Salesforce/main/default/main/default/objects/Votacion__c/fields/Producto__c.field-meta.xml
<CustomField>
    <fullName>Producto__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Selecciona el producto que se facturó(básica) para obtener la Variedad</description>
    <inlineHelpText>Selecione o produto que foi anunciado (básico) para a variedade</inlineHelpText>
    <label>Producto</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Votaciones</relationshipLabel>
    <relationshipName>Votaciones</relationshipName>
    <type>Lookup</type>
</CustomField>