Salesforce/main/default/main/default/objects/Votacion__c/fields/Valor_Copia__c.field-meta.xml
<CustomField>
    <fullName>Valor_Copia__c</fullName>
    <label>Valor Copia</label>
    <length>8</length>
    <type>Text</type>
</CustomField>