Salesforce/main/default/main/default/objects/Votacion__c/fields/Variable__c.field-meta.xml
<CustomField>
    <fullName>Variable__c</fullName>
    <label>Variable</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Precio</fullName>
            </value>
            <value>
                <fullName>Volume</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>