Salesforce/main/default/main/default/objects/Votacion__c/fields/Variedad__c.field-meta.xml
<CustomField>
    <fullName>Variedad__c</fullName>
    <description>Variedade, como o valor inserido no produto</description>
    <formula>Producto__r.Variedade__r.Name</formula>
    <inlineHelpText>Variedade, como o valor inserido no produto</inlineHelpText>
    <label>Variedad</label>
    <type>Text</type>
</CustomField>